# iris

./: Cargo.toml  Makefile  README.md  install.sh  test.sh  uninstall.sh
.github/workflows/: release.yml
agent/: Cargo.toml
agent/src/: collector.rs  lib.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs
deploy/: DEPLOY.md  install-agent.sh  install-server.sh  uninstall-agent.sh  uninstall-server.sh
deploy/launchd/: com.iris.agent.plist  com.iris.server.plist
deploy/systemd/: iris-agent.service  iris-server.service
docs/: API.md  CPU_INFO_DEBUG.md  INSTALL.md  ROADMAP.md  STORAGE_ARCHITECTURE.md  TROUBLESHOOTING.md
proto/: probe.proto
scripts/: bump-version.sh  clean-tags.sh  release.sh
server/: Cargo.toml
server/src/: api.rs  assets.rs  lib.rs  storage.rs
server/src/storage/: cache.rs  cleanup.rs  integration_tests.rs  mod.rs  performance_tests.rs  persist.rs  tests_plan.md
src/: agent_main.rs  main.rs  server_main.rs
web/: README.md  index.html
