[workspace]
members = ["agent", "server", "common"]
resolver = "2"

[package]
name = "iris"
version = "0.1.0"
edition = "2021"

[dependencies]
agent = { path = "agent" }
server = { path = "server" }
common = { path = "common" }
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[[bin]]
name = "iris"
path = "src/main.rs"
