[workspace]
members = ["agent", "server", "common"]
resolver = "2"

[package]
name = "iris"
version = "0.0.4"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Agent 二进制依赖
[dependencies.agent]
path = "agent"
optional = true

# Server 二进制依赖
[dependencies.server]
path = "server"
optional = true

# Agent 独立二进制
[[bin]]
name = "iris-agent"
path = "src/agent_main.rs"
required-features = ["agent"]

# Server 独立二进制
[[bin]]
name = "iris-server"
path = "src/server_main.rs"
required-features = ["server"]

[features]
default = ["agent", "server"]
agent = ["dep:agent"]
server = ["dep:server"]
