[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tonic = "0.12"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1.18"
futures = "0.3.31"
rust-embed = "8.0"
mime_guess = "2.0"
